--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Biodata Anggota Kelompok</title>
-    <link rel="stylesheet" href="../css/style.css" />
+    <link rel="stylesheet" href="css/style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -36,7 +36,7 @@
                     data-aos-offset="400"
                     data-aos-duration="700"
                     data-aos-easing="ease-in-sine">
-                            <a href="fabre.html">
+                            <a href="html/fabre.html">
                                 <img src="../img/fabre.jpg" alt="">
                             </a>
                             <p>Fabre Akhtar Chandra</p>
@@ -45,7 +45,7 @@
                     data-aos-offset="400"
                     data-aos-duration="700"
                     data-aos-easing="ease-in-sine">
-                        <a href="nadya.html">
+                        <a href="html/nadya.html">
                             <img src="../img/nadya.jpg" alt="">
                         </a>
                             <p>Nadya Fitry Rahayu</p>
@@ -54,7 +54,7 @@
                     data-aos-offset="400"
                     data-aos-duration="700"
                     data-aos-easing="ease-in-sine">
-                            <a href="angga.html">
+                            <a href="html/angga.html">
                                 <img src="../img/angga.jpg" alt="">
                             </a>
                             <p>Ilzam Angga Prayuga
@@ -63,7 +63,7 @@
                     <div class="card" data-aos="fade-left"
                     data-aos-duration="700"
                     data-aos-easing="ease-in-sine">
-                            <a href="anas.html">
+                            <a href="html/anas.html">
                                 <img src="../img/anas.jpg" alt="">
                             </a>
                             <p>Muhammad Anas Fadhly
@@ -72,7 +72,7 @@
                     <div class="card" data-aos="fade-left"
                     data-aos-duration="700"
                     data-aos-easing="ease-in-sine">
-                            <a href="nabeela.html">
+                            <a href="html/nabeela.html">
                                 <img src="../img/nabeela.jpg" alt="">
                             </a>
                             <p>Nabeela Hammadah</p>
@@ -80,7 +80,7 @@
                     <div class="card" data-aos="fade-left"
                     data-aos-duration="700"
                     data-aos-easing="ease-in-sine">
-                            <a href="ilmi.html">
+                            <a href="html/ilmi.html">
                                 <img src="../img/ilmi.jpg" alt="">
                             </a>
                             <p>Muhammad Zidane Kautsar Ilmi</p>
