--- a/html/anas.html
+++ b/html/anas.html
@@ -30,7 +30,7 @@
         <section class="biodata-wrapper" data-aos="fade-up" data-aos-duration="700">
             
             <div class="biodata-image" data-aos="zoom-in" data-aos-duration="800">
-                <a href="index.html">
+                <a href="../index.html">
                     <img src="../img/anas.jpg" alt="Muhammad Anas Fadhly">
                 </a>
             </div>
