--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                     data-aos-duration="700"
                     data-aos-easing="ease-in-sine">
                             <a href="html/fabre.html">
-                                <img src="../img/fabre.jpg" alt="">
+                                <img src="img/fabre.jpg" alt="">
                             </a>
                             <p>Fabre Akhtar Chandra</p>
                     </div>
@@ -46,7 +46,7 @@
                     data-aos-duration="700"
                     data-aos-easing="ease-in-sine">
                         <a href="html/nadya.html">
-                            <img src="../img/nadya.jpg" alt="">
+                            <img src="img/nadya.jpg" alt="">
                         </a>
                             <p>Nadya Fitry Rahayu</p>
                     </div>
@@ -55,7 +55,7 @@
                     data-aos-duration="700"
                     data-aos-easing="ease-in-sine">
                             <a href="html/angga.html">
-                                <img src="../img/angga.jpg" alt="">
+                                <img src="img/angga.jpg" alt="">
                             </a>
                             <p>Ilzam Angga Prayuga
                             </p>
@@ -64,7 +64,7 @@
                     data-aos-duration="700"
                     data-aos-easing="ease-in-sine">
                             <a href="html/anas.html">
-                                <img src="../img/anas.jpg" alt="">
+                                <img src="img/anas.jpg" alt="">
                             </a>
                             <p>Muhammad Anas Fadhly
                             </p>
@@ -73,7 +73,7 @@
                     data-aos-duration="700"
                     data-aos-easing="ease-in-sine">
                             <a href="html/nabeela.html">
-                                <img src="../img/nabeela.jpg" alt="">
+                                <img src="img/nabeela.jpg" alt="">
                             </a>
                             <p>Nabeela Hammadah</p>
                     </div>
@@ -81,7 +81,7 @@
                     data-aos-duration="700"
                     data-aos-easing="ease-in-sine">
                             <a href="html/ilmi.html">
-                                <img src="../img/ilmi.jpg" alt="">
+                                <img src="img/ilmi.jpg" alt="">
                             </a>
                             <p>Muhammad Zidane Kautsar Ilmi</p>
                     </div>
